--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "node": ">=16.x"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "jsdom": "^20.0.0"
+    "@testing-library/jest-dom": "^5.16.5"
   }
 }
